# machine-learning

./: .gitignore  Cargo.toml  README.md
saved_models/: BEST_-_Linear_Multiple_LinearClassifier_20250301_144533.info  BEST_-_Linear_Simple_LinearClassifier_20250301_142812.info  BEST_-_Linear_Simple_LinearClassifier_20250301_142812.model  BEST_-_MLP_-_Multi_Linear_3_Classes_MLP_20250301_144713.info  BEST_-_MLP_-_Multi_Linear_3_Classes_MLP_20250302_011626.info  BEST_-_MLP_-_Multi_Linear_3_Classes_MLP_20250302_011626.model
saved_models/cas_de_tests/: BEST_-_Linear_Multiple_LinearClassifier_20250301_144533.info  BEST_-_Linear_Multiple_LinearClassifier_20250301_144533.model  BEST_-_Linear_Simple_LinearClassifier_20250301_142812.info  BEST_-_MLP_-_Multi_Linear_3_Classes_MLP_20250301_144713.info  BEST_-_MLP_-_Multi_Linear_3_Classes_MLP_20250301_144713.model  BEST_-_MLP_-_Multi_Linear_3_Classes_MLP_20250302_121706.info  BEST_-_MLP_-_Multi_Linear_3_Classes_MLP_20250302_121706.model  GameClassifier_MLP_4_classes_MLP_20250302_031320.info  GameClassifier_MLP_4_classes_MLP_20250302_031637.info  GameClassifier_MLP_4_classes_MLP_20250302_031828.info  GameClassifier_MLP_4_classes_MLP_20250302_034805.info  GameClassifier_MLP_4_classes_MLP_20250302_035845.info  GameClassifier_MLP_4_classes_MLP_20250302_122124.info  GameClassifier_MLP_4_classes_MLP_20250302_123404.info
saved_models/images_jeux/: 20%_Accuracy_MLP_20250302_032908.info  Le_Saint_Prédicteur_MLP_20250302_031356.info  (+2 more)
src/: Linear_model.rs  MLP.rs  Radial_Basis_Function_Network.rs  conver_img.rs  image_conversion_sys.rs  main.rs  params.rs  states.rs
src/data/: mod.rs  (+9 more)
(+48 files in other folders)
