[package]
name = "machine-learning"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking"], default-features = false }
nalgebra = "0.33.2"
rand = "0.8.5"
bevy_egui = "0.31.0"
egui = "0.29.0"
egui_plot = "0.29.0"

[profile.dev]
panic = "abort"
incremental = false
codegen-units = 1
lto = "thin"

[profile.release]
panic = "abort"
incremental = false
lto = "thin"
codegen-units = 1
debug = false
