[package]
name = "machine-learning"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking"] }
rand = "0.8.5"
bevy_egui = "0.31.0"
egui = "0.29.0"
egui_plot = "0.29"
bevy_input = "0.15.1"
nalgebra = "0.33.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy)
[profile.dev.package."*"]
opt-level = 3